# single-file-wbs

./: .gitignore  CLAUDE.en.md  CLAUDE.md  README.en.md  README.md  pm-skill.md  pyproject.toml  wbs.json  wbs_roadmap.json  wbs_sample.json  wbs_viewer.html
.github/: FUNDING.yml
docs/: index.md
docs/adr/: 0001-dependency-free-single-file.md  0002-file-system-access-editing.md  0003-no-derived-values-in-data.md  0004-ai-first-json-as-api.md  0005-cud-color-design.md  0006-e2e-headless-chromium.md  0007-license-mit.md
docs/design/: system-overview.md
scripts/: refresh_docs_index.py
tests/: INDEX.md  正常_4階層ネスト.json  正常_5階層.json  正常_エッジ多様.json  正常_カスタムキー.json  正常_リスケ履歴.json  正常_備考URL.json  正常_全機能.json  正常_大量タスク120.json  正常_広い期間1年.json  正常_旧フォーマット単一.json  正常_特殊文字エスケープ.json  正常_空タスク.json  正常_終了遅延.json  正常_複数4プロジェクト.json  異常_color注入.json  異常_リスケ履歴.json  異常_不正な日付.json  異常_壊れMS重複ID.json  異常_数値境界.json  異常_欠損フィールド.json  異常_祝日.json
tests/e2e/: README.md  common.py  golden.json  golden.py  run_all.py  test_colcollapse.py  test_collapse.py  test_color_audit.py  test_corpus.py  test_date_shorthand.py  test_dates.py  test_display.py  test_done.py  test_edit.py  test_filter.py  test_gantt_bars.py  test_golden.py  test_highlight.py  test_holiday.py  test_i18n.py  test_links.py  test_load.py  test_milestone.py  test_nest.py  test_permissions.py  test_pixel.py  test_plain.py  test_planlog.py  test_progress.py  test_render.py  test_save.py  test_save_retry.py  test_security.py  test_ui.py
